--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 
 	<build>
 		<plugins>
+		<plugin>
+  <groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.8.7-SNAPSHOT</version>
+</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
