--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<plugin>
    <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.5.10.201208310627</version>
+                <version>0.8.7-SNAPSHOT</version>
                 <configuration>
                     <skip>${maven.test.skip}</skip>
                     <output>file</output>
